Improve command line error handling
-Now error handling works in two ways: It checks for "error" string in output, and checks for expected string in stderr

--- a/example_config.json
+++ b/example_config.json
@@ -1,4 +1,4 @@
 {
-    "MOA_path":"C:\\Users\\user\\Documents\\moa-release-2024.07.0",
+    "MOA_path":"C:/Users/user/Documents/moa-release-2024.07.0",
     "Java_path":"java"
 }
