Implement json dataset loading

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,6 +10,6 @@ readme = "README.md"
 license = { text = "MIT" }
 authors = [{ name = "Piotr Sołtysik", email = "pit56482@gmail.com" }]
 requires-python = ">=3.7"
-dependencies = ["pandas>=2.3.1", "scipy>=1.16.1"]
+dependencies = ["pandas>=2.3.1", "scipy>=1.16.1", "typeguard>=4.4.4"]
 [project.scripts]
 moa_bulk = "moa_bulk_generator.__main__:main"
